swagger généré et accessible par /swagger/index.html
