# cmd/web_api/docs/swagger.json
@@ -1,161 +1,361 @@
 {
     "swagger": "2.0",
     "info": {
-        "title": "AirportMQTT API",
-        "description": "Display of readings et average specifying type and/or date.",
-        "version": "1.0.0",
         "contact": {}
     },
     "paths": {
         "/dailyAverage": {
             "get": {
-                "tags": [
-                    "dailyAverage"
-                ],
-                "summary": "Get daily average",
-                "description": "Get daily average of every type of sensor, you can optionally specify one",
-                "operationId": "getDailyAverage",
+                "description": "Get daily averages for temperature, pressure, and wind speed or everything.",
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Get daily averages",
+                "operationId": "get-daily-averages",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Airport IATA code",
+                        "name": "airportIATA",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Date in the format '02-01-2006'",
                         "name": "day",
                         "in": "query",
-                        "description": "date",
-                        "required": true,
-                        "type": "string"
+                        "required": true
                     },
                     {
+                        "type": "string",
+                        "description": "Type of sensor data (temperature, pressure, wind_speed)",
                         "name": "type",
-                        "in": "query",
-                        "description": "type of sensor",
-                        "required": false,
-                        "type": "string"
-                    },
-                    {
-                        "name": "airportIATA",
-                        "in": "query",
-                        "description": "ID of the airport",
-                        "required": false,
-                        "type": "string"
+                        "in": "query"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
+                        "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "properties": {
-                                "jour": {
-                                    "type": "string",
-                                    "example": "16-01-2024"
-                                },
-                                "avg": {
-                                    "type": "array",
-                                    "items": {
-                                        "type": "object",
-                                        "properties": {
-                                            "Avg": {
-                                                "type": "number",
-                                                "example": "12.5"
-                                            },
-                                            "SensorType": {
-                                                "type": "string",
-                                                "example": "temperature"
-                                            }
-                                        }
-                                    }
-                                }
-                            }
+                            "$ref": "#/definitions/api.SensorDataResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid input"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/distinctAirportCodes": {
+            "get": {
+                "description": "Retrieve a list of all distinct airport IATA codes from the database.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get distinct airport codes",
+                "operationId": "get-distinct-airport-codes",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/lastReadingForSensor": {
+            "get": {
+                "description": "Retrieve the last reading from a specific sensor, optionally filtered by airport IATA code.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get the last reading for a specific sensor",
+                "operationId": "get-last-reading-for-sensor",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sensor ID",
+                        "name": "sensorId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Airport IATA Code",
+                        "name": "airportIATA",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.SensorData"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
         },
         "/onTimeList": {
             "get": {
-                "tags": [
-                    "onTimeList"
+                "description": "Get every measures by a type.",
+                "consumes": [
+                    "application/json"
                 ],
-                "summary": "Get on time list",
-                "description": "Get list of readings between two dates given, type can be optionally added",
-                "operationId": "getOnTimeList",
                 "produces": [
                     "application/json"
                 ],
+                "summary": "Get readings by type",
+                "operationId": "on-time-list",
                 "parameters": [
                     {
+                        "type": "string",
+                        "description": "Date in the format '02-01-2006'",
+                        "name": "day",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Type of sensor data (temperature, pressure, wind_speed)",
                         "name": "type",
                         "in": "query",
-                        "description": "type of sensor",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "from",
-                        "in": "query",
-                        "description": "beginning of the readings",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "name": "to",
-                        "in": "query",
-                        "description": "end of the readings",
-                        "required": true,
-                        "type": "string"
+                        "required": true
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "Successful operation",
+                        "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "type": "object",
-                                "properties": {
-                                    "sensorId": {
-                                        "type": "string",
-                                        "example": "1"
-                                    },
-                                    "airportIATA": {
-                                        "type": "string",
-                                        "example": "DBX"
-                                    },
-                                    "sensorType": {
-                                        "type": "string",
-                                        "example": "temperature"
-                                    },
-                                    "readings": {
-                                        "type": "array",
-                                        "items": {
-                                            "type": "object",
-                                            "properties": {
-                                                "timestamp": {
-                                                    "type": "string",
-                                                    "example": "2024-01-16T16:47:16.119Z"
-                                                },
-                                                "value": {
-                                                    "type": "number",
-                                                    "example": "24.08983"
-                                                }
-                                            }
-                                        }
-
-                                    }
-                                }
-                            }
+                            "$ref": "#/definitions/api.SensorDataResponse"
                         }
                     },
                     "400": {
-                        "description": "Invalid input"
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
                     }
                 }
             }
+        },
+        "/readingsForSensor": {
+            "get": {
+                "description": "Retrieve all readings from a specific sensor, optionally filtered by airport IATA code.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all readings for a specific sensor",
+                "operationId": "get-all-readings-for-sensor",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Sensor ID",
+                        "name": "sensorId",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Airport IATA Code",
+                        "name": "airportIATA",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Sensor"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/sensorsForAirport": {
+            "get": {
+                "description": "Retrieve all sensors associated with a given airport IATA code.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Get all sensors for a specific airport",
+                "operationId": "get-all-sensors-for-airport",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Airport IATA Code",
+                        "name": "airportIATA",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/model.Sensor"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "api.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                }
+            }
+        },
+        "api.SensorDataResponse": {
+            "type": "object",
+            "properties": {
+                "avg": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Average"
+                    }
+                },
+                "jour": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.Average": {
+            "type": "object",
+            "properties": {
+                "avg": {
+                    "type": "number"
+                },
+                "sensorType": {
+                    "$ref": "#/definitions/model.Type"
+                }
+            }
+        },
+        "model.Reading": {
+            "type": "object",
+            "properties": {
+                "timestamp": {
+                    "type": "string"
+                },
+                "value": {
+                    "type": "number"
+                }
+            }
+        },
+        "model.Sensor": {
+            "type": "object",
+            "properties": {
+                "airportIATA": {
+                    "type": "string"
+                },
+                "readings": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.Reading"
+                    }
+                },
+                "sensorId": {
+                    "type": "string"
+                },
+                "sensorType": {
+                    "$ref": "#/definitions/model.Type"
+                }
+            }
+        },
+        "model.SensorData": {
+            "type": "object",
+            "properties": {
+                "airportIATA": {
+                    "description": "format: \u003c3 letters\u003e",
+                    "type": "string"
+                },
+                "sensorId": {
+                    "description": "format: \u003cuuid\u003e",
+                    "type": "string"
+                },
+                "timestamp": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "0: temperature, 1: pressure, 2: wind speed",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/model.Type"
+                        }
+                    ]
+                },
+                "value": {
+                    "description": "value of the sensor",
+                    "type": "number"
+                }
+            }
+        },
+        "model.Type": {
+            "type": "integer",
+            "enum": [
+                0,
+                1,
+                2,
+                3
+            ],
+            "x-enum-varnames": [
+                "Undefined",
+                "Temperature",
+                "WindSpeed",
+                "Pressure"
+            ]
         }
     }
 }
